--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Madhukar Pandey\AppData\Local\Temp\testng-eclipse-1741267613\testng-customsuite.xml</span>
+                    <span>C:\Users\Madhukar Pandey\AppData\Local\Temp\testng-eclipse--261693656\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,17 +103,27 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day11.GraphQLMutationTests" class="method navigator-link" hash-for-method="testDeleteTodo">testDeleteTodo</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="day10.DataDrivenTesting" class="method navigator-link" hash-for-method="testWithExcelData(admin, password123, Madhukar, Pandey, 1111, true, 2018-01-01, 2019-01-01, Breakfast)">testWithExcelData(admin, password123, Madhukar, Pandey, 1111, true, 2018-01-01, 2019-01-01, Breakfast)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day11.GraphQLMutationTests" class="method navigator-link" hash-for-method="testInsertTodo">testInsertTodo</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="day10.DataDrivenTesting" class="method navigator-link" hash-for-method="testWithExcelData(admin, password123, Simran, Rahi, 2500, true, 2025-05-01, 2025-05-10, Breakfast,Dinner)">testWithExcelData(admin, password123, Simran, Rahi, 2500, true, 2025-05-01, 2025-05-10, Breakfast,Dinner)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day11.GraphQLMutationTests" class="method navigator-link" hash-for-method="testupdateTodos">testupdateTodos</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="day10.DataDrivenTesting" class="method navigator-link" hash-for-method="testWithExcelData(admin, password123, Ishita, Bhatt, 2000, false, 2022-05-01, 2022-05-10, Lunch)">testWithExcelData(admin, password123, Ishita, Bhatt, 2000, false, 2022-05-01, 2022-05-10, Lunch)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="day10.DataDrivenTesting" class="method navigator-link" hash-for-method="testWithExcelData(admin, password123, Harsh, Gupta, 2200, false, 2025-08-07, 2025-08-10, Breakfast,Dinner)">testWithExcelData(admin, password123, Harsh, Gupta, 2200, false, 2025-08-07, 2025-08-10, Breakfast,Dinner)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="day10.DataDrivenTesting" class="method navigator-link" hash-for-method="testWithExcelData(admin, password123, Ayush, Kumar, 3500, false, 2025-09-15, 2025-05-17, Breakfast,Lunch,Dinner)">testWithExcelData(admin, password123, Ayush, Kumar, 3500, false, 2025-09-15, 2025-05-17, Breakfast,Lunch,Dinner)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -131,28 +141,47 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">day11.GraphQLMutationTests</span>
+              <span class="class-name">day10.DataDrivenTesting</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testDeleteTodo">
-                  </a> <!-- testDeleteTodo -->
-                  <span class="method-name">testDeleteTodo</span>
+                  <a name="testWithExcelData(admin, password123, Madhukar, Pandey, 1111, true, 2018-01-01, 2019-01-01, Breakfast)">
+                  </a> <!-- testWithExcelData(admin, password123, Madhukar, Pandey, 1111, true, 2018-01-01, 2019-01-01, Breakfast) -->
+                  <span class="method-name">testWithExcelData</span>
+                  <span class="parameters">(admin,password123,Madhukar,Pandey,1111,true,2018-01-01,2019-01-01,Breakfast)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testInsertTodo">
-                  </a> <!-- testInsertTodo -->
-                  <span class="method-name">testInsertTodo</span>
+                  <a name="testWithExcelData(admin, password123, Simran, Rahi, 2500, true, 2025-05-01, 2025-05-10, Breakfast,Dinner)">
+                  </a> <!-- testWithExcelData(admin, password123, Simran, Rahi, 2500, true, 2025-05-01, 2025-05-10, Breakfast,Dinner) -->
+                  <span class="method-name">testWithExcelData</span>
+                  <span class="parameters">(admin,password123,Simran,Rahi,2500,true,2025-05-01,2025-05-10,Breakfast,Dinner)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testupdateTodos">
-                  </a> <!-- testupdateTodos -->
-                  <span class="method-name">testupdateTodos</span>
+                  <a name="testWithExcelData(admin, password123, Ishita, Bhatt, 2000, false, 2022-05-01, 2022-05-10, Lunch)">
+                  </a> <!-- testWithExcelData(admin, password123, Ishita, Bhatt, 2000, false, 2022-05-01, 2022-05-10, Lunch) -->
+                  <span class="method-name">testWithExcelData</span>
+                  <span class="parameters">(admin,password123,Ishita,Bhatt,2000,false,2022-05-01,2022-05-10,Lunch)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testWithExcelData(admin, password123, Harsh, Gupta, 2200, false, 2025-08-07, 2025-08-10, Breakfast,Dinner)">
+                  </a> <!-- testWithExcelData(admin, password123, Harsh, Gupta, 2200, false, 2025-08-07, 2025-08-10, Breakfast,Dinner) -->
+                  <span class="method-name">testWithExcelData</span>
+                  <span class="parameters">(admin,password123,Harsh,Gupta,2200,false,2025-08-07,2025-08-10,Breakfast,Dinner)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testWithExcelData(admin, password123, Ayush, Kumar, 3500, false, 2025-09-15, 2025-05-17, Breakfast,Lunch,Dinner)">
+                  </a> <!-- testWithExcelData(admin, password123, Ayush, Kumar, 3500, false, 2025-09-15, 2025-05-17, Breakfast,Lunch,Dinner) -->
+                  <span class="method-name">testWithExcelData</span>
+                  <span class="parameters">(admin,password123,Ayush,Kumar,3500,false,2025-09-15,2025-05-17,Breakfast,Lunch,Dinner)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -160,7 +189,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Madhukar Pandey\AppData\Local\Temp\testng-eclipse-1741267613\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Madhukar Pandey\AppData\Local\Temp\testng-eclipse--261693656\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -169,7 +198,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;day11.GraphQLMutationTests&quot;/&gt;
+      &lt;class name=&quot;day10.DataDrivenTesting&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -209,24 +238,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testInsertTodo')
-data.setCell(0, 2, 'day11.GraphQLMutationTests')
-data.setCell(0, 3, 4594);
+data.setCell(0, 1, 'testWithExcelData')
+data.setCell(0, 2, 'day10.DataDrivenTesting')
+data.setCell(0, 3, 8369);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testupdateTodos')
-data.setCell(1, 2, 'day11.GraphQLMutationTests')
-data.setCell(1, 3, 1652);
+data.setCell(1, 1, 'testWithExcelData')
+data.setCell(1, 2, 'day10.DataDrivenTesting')
+data.setCell(1, 3, 4905);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testDeleteTodo')
-data.setCell(2, 2, 'day11.GraphQLMutationTests')
-data.setCell(2, 3, 1314);
+data.setCell(2, 1, 'testWithExcelData')
+data.setCell(2, 2, 'day10.DataDrivenTesting')
+data.setCell(2, 3, 4888);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'testWithExcelData')
+data.setCell(3, 2, 'day10.DataDrivenTesting')
+data.setCell(3, 3, 4736);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'testWithExcelData')
+data.setCell(4, 2, 'day10.DataDrivenTesting')
+data.setCell(4, 3, 4694);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 27 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -252,18 +289,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">day11.GraphQLMutationTests</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">day10.DataDrivenTesting</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">testInsertTodo</span>
+                <span class="method-name">testWithExcelData(admin, password123, Madhukar, Pandey, 1111, true, 2018-01-01, 2019-01-01, Breakfast)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testupdateTodos</span>
-                <span class="method-start">4611 ms</span>
+                <span class="method-name">testWithExcelData(admin, password123, Ishita, Bhatt, 2000, false, 2022-05-01, 2022-05-10, Lunch)</span>
+                <span class="method-start">8380 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testDeleteTodo</span>
-                <span class="method-start">6267 ms</span>
+                <span class="method-name">testWithExcelData(admin, password123, Simran, Rahi, 2500, true, 2025-05-01, 2025-05-10, Breakfast,Dinner)</span>
+                <span class="method-start">13291 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testWithExcelData(admin, password123, Harsh, Gupta, 2200, false, 2025-08-07, 2025-08-10, Breakfast,Dinner)</span>
+                <span class="method-start">18185 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testWithExcelData(admin, password123, Ayush, Kumar, 3500, false, 2025-09-15, 2025-05-17, Breakfast,Lunch,Dinner)</span>
+                <span class="method-start">22884 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
